Closed Bug 530739 Opened 16 years ago Closed 16 years ago

Intermittent Shutdown crash after visiting a page with flash video

Categories

(Core Graveyard :: Plug-ins, defect)

ARM
Maemo
defect
Not set
critical

Tracking

(status1.9.2 beta5-fixed, fennec1.0+)

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta5-fixed
fennec 1.0+ ---

People

(Reporter: dougt, Assigned: dougt)

Details

Attachments

(1 file)

We are seeing a shutdown crash after visiting a page with flash video. No stack trace yet.
tracking-fennec: --- → ?
tracking-fennec: ? → 1.0+
Assignee: nobody → mozbugz
Attached patch patch v.1Splinter Review
Attachment #414556 - Flags: review?(jst)
Comment on attachment 414556 [details] [diff] [review] patch v.1 > DoDelayedStop(nsPluginInstanceOwner *aInstanceOwner, PRBool aDelayedStop) > { >+#ifdef MOZ_PLATFORM_HILDON >+ // Don't delay stop on Maemo/Hildon (bug 530739). >+ if (aInstanceOwner->MatchPluginName("Shockwave Flash")) >+ return PR_FALSE; >+#endif Do you want to test for aDelayedStop here too? Like the code below does. >+ > // Don't delay stopping QuickTime (bug 425157), Flip4Mac (bug 426524), > // XStandard (bug 430219), CMISS Zinc (bug 429604). > if (aDelayedStop > #if !(defined XP_WIN || defined MOZ_X11) > && !aInstanceOwner->MatchPluginName("QuickTime")
Comment on attachment 414556 [details] [diff] [review] patch v.1 r=jst wiht mfinkle's suggested change.
Attachment #414556 - Flags: review?(jst) → review+
Assignee: mozbugz → nobody
Component: Linux/Maemo → Plug-ins
Product: Fennec → Core
QA Contact: maemo-linux → plugins
Assignee: nobody → mozbugz
Attachment #414556 - Flags: approval1.9.2? → approval1.9.2+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: