Bug 530739 - Intermittent Shutdown crash after visiting a page with flash video. r=jst